fix counter colour, wrap the longer tweet messages

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -22,6 +22,7 @@ footer span {
 .tweet-body {
   border-bottom: 2px solid black;
   padding-left: 10px;
+  word-wrap: break-word;
 }
 
 .username {
